Refactored into 2 bundles

--- a/src/IKTO/TestportalEmu/GuiBundle/Resources/views/Default/index.html.twig
+++ b/src/IKTO/TestportalEmu/GuiBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "IktoTestportalEmuBundle::layout.html.twig" %}
+{% extends "IktoTpEmuGuiBundle::layout.html.twig" %}
 
 {% block content %}
     <h2>Перевірка відповідності даних сертифікату</h2>
