--- a/src/IKTO/TestportalEmu/GuiBundle/Resources/views/Default/show.html.twig
+++ b/src/IKTO/TestportalEmu/GuiBundle/Resources/views/Default/show.html.twig
@@ -1,4 +1,4 @@
-{% extends "IktoTestportalEmuBundle::layout.html.twig" %}
+{% extends "IktoTpEmuGuiBundle::layout.html.twig" %}
 
 {% block content %}
 <h2>{{ certificate.name }}</h2>
